# Sonic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sonic.sln
Sonic/: Sonic.vcxproj  Sonic.vcxproj.filters
Sonic/src/: Sonic.h  Test.cpp  Test.h
Sonic/src/Sonic/: Application.cpp  Application.h  Core.h  EntryPoint.h
Sonic/src/Sonic/managers/: LogManager.cpp  LogManager.h
SonicEngine/: SonicEngine.vcxproj  SonicEngine.vcxproj.filters
SonicEngine/src/: Sonic.h
SonicEngine/src/Sonic/: Application.cpp  Application.h  Core.h  LogManager.cpp  LogManager.h
SonicEngine/src/Sonic/managers/EventManager/: Event.h  Keyboard.h
SonicEngineCore/: CMakeLists.txt
SonicEngineCore/includes/SonicEngineCore/: application.h
SonicEngineEditor/: CMakeLists.txt
User/: User.vcxproj  User.vcxproj.filters
User/src/: Application.cpp  UserApp.cpp  main.cpp
bin-int/Debug-x64/Sonic/: Sonic.dll.recipe  Sonic.ilk  vc143.idb
bin-int/Debug-x64/Sonic/Sonic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sonic.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-x64/User/: User.exe.recipe  User.ilk  vc143.idb
bin-int/Debug-x64/User/User.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
